// $Id: CHANGELOG.txt,v 1.2 2009/03/04 15:52:16 sun Exp $

IMCE Wysiwyg x.x-x.x, xxxx-xx-xx
--------------------------------


IMCE Wysiwyg 6.x-1.x, xxxx-xx-xx
--------------------------------


IMCE Wysiwyg 6.x-1.0, 2009-03-04
--------------------------------
#380944 by sun: Fixed url encoding for FCKeditor and proper invocation of
  imce_access().
#380944 by sun: Added documentation; code clean-up.
#287025 by sun: Added Wysiwyg API integration code for IMCE.

