@@ -3,9 +3,9 @@ name = "IMCE"
 description = "An image/file uploader and browser supporting personal directories and user quota."
 core = "6.x"
 
-; Information added by drupal.org packaging script on 2009-09-25
-version = "6.x-1.3"
+; Information added by drupal.org packaging script on 2010-12-27
+version = "6.x-2.1"
 core = "6.x"
 project = "imce"
-datestamp = "1253890535"
+datestamp = "1293481277"
 
