@@ -6,9 +6,9 @@ core = 6.x
 dependencies[] = imce
 dependencies[] = wysiwyg
 
-; Information added by drupal.org packaging script on 2009-03-04
-version = "6.x-1.0"
+; Information added by drupal.org packaging script on 2010-03-12
+version = "6.x-1.1"
 core = "6.x"
 project = "imce_wysiwyg"
-datestamp = "1236182123"
+datestamp = "1268433606"
 
