@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.2 2009/03/04 15:52:16 sun Exp $
+// $Id: CHANGELOG.txt,v 1.4.2.2 2010/03/12 22:38:03 sun Exp $
 
 IMCE Wysiwyg x.x-x.x, xxxx-xx-xx
 --------------------------------
@@ -6,6 +6,12 @@ IMCE Wysiwyg x.x-x.x, xxxx-xx-xx
 
 IMCE Wysiwyg 6.x-1.x, xxxx-xx-xx
 --------------------------------
+
+
+IMCE Wysiwyg 6.x-1.1, 2010-03-12
+--------------------------------
+#533168 by suhock, that0n3guy, Niels Hackius: Added support for CKeditor.
+#508180 by joachim: Added mention to README of needing Image plugin enabled.
 
 
 IMCE Wysiwyg 6.x-1.0, 2009-03-04
